--- a/package.json
+++ b/package.json
@@ -5,20 +5,33 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "server": "node ./server/index.js",
+    "generate-data": "node ./server/generate-data.js"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "query-string": "^7.1.1",
+    "vue": "^2.6.14",
+    "vue-moment": "^4.1.0",
+    "vue-router": "^3.1.6",
+    "vuelidate": "^0.7.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@faker-js/faker": "^6.1.2",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "json-server": "^0.17.0",
+    "json-server-auth": "^2.1.0",
+    "jsonwebtoken": "^8.5.1",
+    "node-sass": "^7.0.1",
+    "sass-loader": "^12.6.0",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
