--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
     "query-string": "^7.1.1",
+    "vee-validate": "^3.4.14",
     "vue": "^2.6.14",
     "vue-moment": "^4.1.0",
     "vue-router": "^3.1.6",
