--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "vue": "^2.6.14",
     "vue-moment": "^4.1.0",
     "vue-router": "^3.1.6",
-    "vuelidate": "^0.7.7"
+    "vuelidate": "^0.7.7",
+    "vuetify": "^2.6.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
